fixed fx-alignment to center-left

--- a/src/main/resources/css/main_style.css
+++ b/src/main/resources/css/main_style.css
@@ -134,7 +134,7 @@
 }
 
 .combo-box#lessons .cell {
-    -fx-alignment: left;
+    -fx-alignment: center-left;
 }
 
 .combo-box-popup .list-view {
